// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RatsHR snapshot matches with custom style 1`] = `
<View
  style={
    [
      {
        "alignSelf": "stretch",
        "borderBottomColor": "#969696",
        "borderBottomWidth": 3,
      },
      {
        "marginVertical": 10,
        "opacity": 0.5,
      },
    ]
  }
/>
`;

exports[`RatsHR snapshot matches with no props 1`] = `
<View
  style={
    [
      {
        "alignSelf": "stretch",
        "borderBottomColor": "#969696",
        "borderBottomWidth": 3,
      },
      undefined,
    ]
  }
/>
`;
